--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -26,6 +27,13 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.Country-counter {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  font-size: 2em;
 }
 
 @keyframes App-logo-spin {
